--- a/index.html
+++ b/index.html
@@ -36,6 +36,21 @@
 
 </section>
 <!-- banner section end -->
+
+<!-- about-me section start  -->
+<section class="about-me">
+    <div class="about-img">
+        <img src="image/about-section-img.png" alt="">
+    </div>
+    <div class="about-content">
+        <h1 class="a_hea">About Me</h1>
+        <P class="a_para">I’m a certified wellness and nutrition coach working with busy people to help them look good, feel better and take charge of their health and well-being. I assist you to achieve your goals around health, food, eating and lifestyle – and make them stick. I will empower you to adopt habits that place you on the path to a healthier and happier future.</P>
+        <a class="contact-button" target="_blank" href="https://web.programming-hero.com/">Contact Me</a>
+    </div>
+</section>
+<!-- about-me section start  -->
+
+
 </body>
 
 </html>
