my_recipe_section

--- a/index.html
+++ b/index.html
@@ -50,6 +50,36 @@
 </section>
 <!-- about-me section start  -->
 
+<!--  my-recipies section start  -->
+<section class="my-recipies">
+    <div class="recipie-content">
+        <h1 class="reci_hea">My Most Popular Recipes</h1>
+        <p class="reci_para">I publish authoritative, science-based nutrition recipes articles and delicious, high-quality recipes across multiple award-winning platforms.</p>
+    </div>
+    <!-- recipie-item -->
+    <div class="recipie-item">
+        <div class="recipie">
+            <img src="image/recipe-1.jpg" alt="recipie">
+            <h2 class="re_item_hea">Chocolate Cake 
+
+                </h2>
+            <p class="re_item_para">Whisk the cocoa powder and 1 1/2 cups boiling water in a medium bowl until smooth; set aside. Whisk the flour, sugar, baking powder... </p>
+        </div>
+        <div class="recipie">
+            <img src="image/recipie-2.jpg" alt="recipie">
+            <h2 class="re_item_hea">Beef Massaman Soup </h2>
+            <p class="re_item_para">Heat half the oil in a large heavy-based saucepan over medium-high heat. Cook beef, in 2 batches, for 5 to 6 minutes...</p>
+        </div>
+        <div class="recipie">
+            <img src="image/recipie-3.jpg" alt="recipie">
+            <h2 class="re_item_hea">BBQ lobster ginger 
+               </h2>
+            <p class="re_item_para">Cook first 4 ingredients in medium saucepan over low heat until garlic and ginger begin to brown, about 8 minutes. Set aside...</p>
+        </div>
+    </div>
+    <!-- recipie-item -->
+</section>
+<!-- my recipies section end  -->
 
 </body>
 
