social_media_section

--- a/index.html
+++ b/index.html
@@ -81,6 +81,26 @@
 </section>
 <!-- my recipies section end  -->
 
+<!-- social-media section start   -->
+<section class="social-media">
+    <div class="social-item">
+        <div class="social">
+            <h1 class="so_hea">700k</h1>
+            <p class="so_para">Youtube Subscribers</p>
+        </div>
+        <div class="social">
+            <h1 class="so_hea">2.4m</h1>
+            <p class="so_para">Instagram Followers</p>
+        </div>
+        <div class="social">
+            <h1 class="so_hea">100k</h1>
+            <p class="so_para">Dribble Shot Like </p>
+        </div>
+    </div>
+</section>
+<!-- social-media section end   -->
+
+
 </body>
 
 </html>
