--- a/index.html
+++ b/index.html
@@ -101,6 +101,18 @@
 <!-- social-media section end   -->
 
 
+    <!-- subscribe section start  -->
+    <section class="subscribe">
+        <div class="subscribe-content">
+            <h1 class="sub_hea">Subscribe to my Newsletter</h1>
+            <p class="sub_para">
+                Join my mailing list to receive the latest news and daily recpies
+                ideas that can help to be healthy.</p>
+                <a class="sub_button " target="_blank" href="https://web.programming-hero.com/">Subscribe</a>
+        </div>
+    </section>
+    <!-- subscribe section end  -->
+
 </body>
 
 </html>
