--- a/index.html
+++ b/index.html
@@ -113,6 +113,32 @@
     </section>
     <!-- subscribe section end  -->
 
+    <!-- category section start  -->
+    <section class="category">
+        <div class="category-content">
+            <h1 class="cate_hea">Recipes By Category</h1>
+            <p class="cate_para">Search over 500+ whole food recipes by course, meat, or cuisine. Or scroll to discover the latest recipes from my best, most popular categories!</p>
+
+        </div>
+        <div class="category-item">
+            <div class="category-img">
+                <img src="image/category1.jpg" alt="category">
+                <h2 class="cate_h2">Sweets</h2>
+            </div>
+            <div class="category-img" id="img-mar">
+                <img src="image/category2.jpg" alt="category">
+                <h2 class="cate_h2">Burgers</h2>
+            </div>
+            <div class="category-img" id="img3-mar">
+                <img src="image/category-3.jpg" alt="category">
+                
+                <h2 class="cate_h2">Drinks</h2>
+
+            </div>
+        </div>
+
+    </section>
+
 </body>
 
 </html>
