--- a/index.html
+++ b/index.html
@@ -140,6 +140,17 @@
     </section>
      <!-- category section end  -->
 
+     
+    <!-- footer section start  -->
+    <footer class="footer">
+        <div class="footer-content">
+            <h1 class="fo_hea"> <sapn class="fo_hea_color">FOOD</sapn> NETWORK</h1>
+            <p class="fo_para">Eat healthy to live healthy. Live healthy to live happy.</p>
+        </div>
+    </footer>
+
+    <!-- footer section end  -->
+
 </body>
 
 </html>
